--- a/src/main/resources/chooseCharacter.fxml
+++ b/src/main/resources/chooseCharacter.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -7,19 +8,18 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
       <Label layoutX="240.0" layoutY="31.0" prefHeight="57.0" prefWidth="121.0" text="Choose your character" textAlignment="CENTER" />
-      <RadioButton fx:id="rbSprog" layoutX="85.0" layoutY="154.0" mnemonicParsing="false" onAction="#chooseCharacter" text="SPROG">
+      <RadioButton fx:id="rbSprog" disable="true" layoutX="85.0" layoutY="154.0" mnemonicParsing="false" onAction="#chooseCharacter" text="SPROG">
          <toggleGroup>
             <ToggleGroup fx:id="rbChooseCharacter" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="rbViolet" layoutX="85.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="VIOLET" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbStruct" layoutX="250.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseCharacter" text=":D-STRUCT-OR" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbDozer" layoutX="455.0" layoutY="163.0" mnemonicParsing="false" onAction="#chooseCharacter" text="DOZER" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbBanshee" layoutX="455.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="BANSHEE" toggleGroup="$rbChooseCharacter" />
+      <RadioButton fx:id="rbViolet" disable="true" layoutX="85.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="VIOLET" toggleGroup="$rbChooseCharacter" />
+      <RadioButton fx:id="rbStruct" disable="true" layoutX="250.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseCharacter" text=":D-STRUCT-OR" toggleGroup="$rbChooseCharacter" />
+      <RadioButton fx:id="rbDozer" disable="true" layoutX="455.0" layoutY="163.0" mnemonicParsing="false" onAction="#chooseCharacter" text="DOZER" toggleGroup="$rbChooseCharacter" />
+      <RadioButton fx:id="rbBanshee" disable="true" layoutX="455.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="BANSHEE" toggleGroup="$rbChooseCharacter" />
       <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="49.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@characters/sprogGreen.jpg" />
@@ -45,5 +45,6 @@
             <Image url="@characters/banshBlue.jpg" />
          </image>
       </ImageView>
+      <Button layoutX="188.0" layoutY="300.0" mnemonicParsing="false" onAction="#chooseYourCharacter" prefHeight="57.0" prefWidth="229.0" text="SHOW POSSIBLE CHARACTER" />
    </children>
 </AnchorPane>
